--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,18 @@ wheels/
 # 운영체제 파일
 .DS_Store
 Thumbs.db
+
+# Node.js
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+.npm
+.yarn-integrity
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
