--- a/vueApp/package.json
+++ b/vueApp/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.6.0",
     "core-js": "^3.33.0",
+    "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vue3-google-login": "^2.0.23",
-    "pinia": "^2.1.7"
+    "vuetify": "^3.8.0-beta.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.9.0",
