--- a/vueApp/package.json
+++ b/vueApp/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.6.0",
+    "chart.js": "^4.4.9",
     "core-js": "^3.33.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.2.5",
     "vue3-google-login": "^2.0.23",
     "vuetify": "^3.8.0-beta.0"
