--- a/vueApp/package.json
+++ b/vueApp/package.json
@@ -9,6 +9,11 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vue-flow/background": "^1.3.2",
+    "@vue-flow/controls": "^1.1.2",
+    "@vue-flow/core": "^1.43.1",
+    "@vue-flow/minimap": "^1.5.3",
+    "@vue-flow/node-resizer": "^1.4.0",
     "axios": "^1.6.0",
     "chart.js": "^4.4.9",
     "core-js": "^3.33.0",
